--- a/Documents/NetBeansProjects/carpinteriaproyecto/src/main/java/vista/login.form
+++ b/Documents/NetBeansProjects/carpinteriaproyecto/src/main/java/vista/login.form
@@ -68,13 +68,13 @@
         <Component class="javax.swing.JLabel" name="jLabel4">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Comic Sans MS" size="36" style="0"/>
+              <Font name="SansSerif" size="36" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="BIENVENIDO"/>
+            <Property name="text" type="java.lang.String" value="&#xa1;BIENVENIDO!"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="70" y="80" width="255" height="-1"/>
+              <AbsoluteConstraints x="70" y="80" width="270" height="50"/>
             </Constraint>
           </Constraints>
         </Component>
